--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-ca">
 <head>
+  <meta charset="utf-8">
   <title>Accessibility fixer-upper</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
@@ -11,24 +12,31 @@
 </head>
 <body>
 
-    <header class="masthead" role="banner">
-      <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
-        <h1 class="push-0">Shrubbery, etc.</h1>
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
+
+  <header class="masthead" role="banner">
+    <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
+      <h1 class="push-0">Shrubbery, etc.</h1>
+    </div>
+    <nav class="nav" id="nav" role="navigation">
+      <div class="wrapper gutter-1-2">
+        <ol class="mega list-group-inline push-0">
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#shrubs">Shrubs</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#news">News</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#contact">Contact</a></li>
+        </ol>
       </div>
-      <div class="nav" id="nav" role="navigation">
-        <div class="wrapper gutter-1-2">
-          <ol class="mega list-group-inline push-0">
-            <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
-            <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#shrubs">Shrubs</a></li>
-            <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
-            <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#news">News</a></li>
-            <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#contact">Contact</a></li>
-        </div>
-      </div>
-    </header>
+    </nav>
+  </header>
 
   <main role="main" id="main" tabindex="0">
-    <section class="about push" id="about" tabbnidex="0">
+
+    <section class="about push" id="about" tabindex="0">
       <div class="embed embed-24by10">
         <img class="embed-item" src="images/shrubs.jpg" alt="" role="presentation">
       </div>
@@ -38,31 +46,33 @@
           <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length not-centered">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
+      </div>
     </section>
 
-    <section id="products" tabindex="0">
+    <section id="shrubs" tabindex="0">
       <div class="wrapper gutter-1-2">
         <h2 class="push-0 color-brand-dark">Products</h2>
         <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-1.jpg" aria-details="grassy-shrubs">
+            <img class="img-flex push" aria-details="grassy-shrubs" src="images/shrub-1.jpg" alt="">
             <div class="gutter-1-4" id="grassy-shrubs">
               <h3 class="mega push-0">Grassy shrubs</h3>
-              <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
-          </li>
-          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-2.jpg">
-            <div class="gutter-1-4" id="shrubs-with-laurels" aria-details="shrubs-with-laurels">
-              <h3 class="mega push-0">Shrubs with laurels</h3>
-              <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
+              <p>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</p>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-3.jpg" aria-details="two-level-shrub">
+            <img class="img-flex push" aria-details="shrubs-with-laurels" src="images/shrub-2.jpg" alt="">
+            <div class="gutter-1-4" id="shrubs-with-laurels">
+              <h3 class="mega push-0">Shrubs with laurels</h3>
+              <p>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</p>
+            </div>
+          </li>
+          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+            <img class="img-flex push" aria-details="two-level-shrub" src="images/shrub-3.jpg" alt="">
             <div class="gutter-1-4" id="two-level-shrub">
               <h3 class="mega push-0">Two-level shrubbery</h3>
-              <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
+              <p>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</p>
             </div>
           </li>
         </ul>
@@ -75,30 +85,35 @@
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
-          <tr>
-            <td>&nbsp;</td>
-            <td>Small</td>
-            <td>Medium</td>
-            <td>Large</td>
-          </tr>
-          <tr>
-            <td>Grassy shrubs</td>
-            <td>$10</td>
-            <td>$20</td>
-            <td>$30</td>
-          </tr>
-          <tr>
-            <td>Shrubs with laurels</td>
-            <td>$40</td>
-            <td>$70</td>
-            <td>$100</td>
-          </tr>
-          <tr>
-            <td>Two-level shrubbery</td>
-            <td>$50</td>
-            <td>$70</td>
-            <td>$90</td>
-          </tr>
+          <thead>
+            <tr>
+              <th scope="col">&nbsp;</th>
+              <th scope="col">Small</th>
+              <th scope="col">Medium</th>
+              <th scope="col">Large</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <th scope="row">Grassy shrubs</th>
+              <td>$10</td>
+              <td>$20</td>
+              <td>$30</td>
+            </tr>
+            <tr>
+              <th scope="row">Shrubs with laurels</th>
+              <td>$40</td>
+              <td>$70</td>
+              <td>$100</td>
+            </tr>
+            <tr>
+              <th scope="row">Two-level shrubbery</th>
+              <td>$50</td>
+              <td>$70</td>
+              <td>$90</td>
+            </tr>
+          </tbody>
         </table>
       </div>
     </section>
@@ -122,7 +137,8 @@
             <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a href="#" aria-label="Read more about greens of any kind">Read&nbsp;more…</a></p>
           </li>
         </ol>
-      </section>
+      </div>
+    </section>
 
     <section class="contact pad-t pad-b" id="contact" tabindex="0">
       <div class="wrapper">
@@ -131,16 +147,16 @@
 
         <form class="grid" method="post" action="#">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">Your name</span>
-            <input>
+            <label for="name" class="push-1-8">Your name</label>
+            <input type="text" id="name">
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">E-mail address</span>
-            <input>
+            <label for="email" class="push-1-8">E-mail address</label>
+            <input type="text" id="email">
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">Type of shrubbery</span>
-            <select>
+            <label for="type" class="push-1-8">Type of shrubbery</label>
+            <select id="type">
               <option>Two-level shrubbery</option>
               <option>Small shrubbery</option>
               <option>Shrubbery with laurels</option>
@@ -151,8 +167,9 @@
             <button class="btn mega" type="submit">Send</button>
           </div>
         </form>
-      </section>
-    </main>
+      </div>
+    </section>
+  </main>
 
   <footer class="footer pad-t-1-2 pad-b-1-2" role="contentinfo">
     <div class="wrapper gutter-1-2">
