--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
           <h2 class="push-0">About</h2>
-          <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
-          <p class="mega push-0 max-length not-centered">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
+          <p class="mega push-0 bold">Is there anywhere in this town where we could buy a shrubbery!?</p>
+          <p class="mega push-0 max-length not-centered bold">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
       </div>
     </section>
@@ -85,6 +85,7 @@
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
+          <caption class="pad-t">Prices for small, medium and large shrubberies.</caption>
           <thead>
             <tr>
               <th scope="col">&nbsp;</th>
@@ -148,7 +149,7 @@
         <form class="grid" method="post" action="#">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="name" class="push-1-8">Your name</label>
-            <input type="text" id="name">
+            <input type="text" id="name" required>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="email" class="push-1-8">E-mail address</label>
